src/jvmMain/sass/main.scss
/* ... */
.user-badges {
  margin-bottom: 50px;
}
.user-badges a {
  float: right;
}
.user-badges a i {
  margin-right: 5px;
}

.DayPickerKeyboardShortcuts_panel {
  color: #000;
}
.DayPicker .presets {
  padding: 0 22px 6px 22px;
}
.DayPicker .presets button {
  margin-bottom: 5px;
  position: relative;
  height: 100%;
  text-align: center;
  border: 2px solid #00a279;
  color: #00a279;
  padding: 2px 10px;
  margin-right: 8px;
  font-weight: 700;
  background: none;
  font-size: 14px;
}
.DayPicker .presets button:hover {
  background: #00a279;
  color: #fff;
}
.DateRangePicker {
  left: 50%;
  transform: translate(-50%, 0);
  z-index: 10;
}
.DateRangePicker_picker, .DayPicker, .CalendarMonth, .CalendarDay:not(.CalendarDay__selected):not(.CalendarDay__selected_span):not(.CalendarDay__hovered_span),
.CalendarMonthGrid, .DayPickerNavigation_button__default {
  background: #222 !important;
  color: #b8b7b7 !important;
}
.DateRangePicker_picker {
  border: 2px solid #ddd;
}
.DayPickerNavigation_svg__horizontal {
  fill: #ddd !important;
  height: 16px !important;
  width: 16px !important;
}
.CalendarDay__selected_span {
  background: #34726d !important;
}
.CalendarMonth_caption {
  color: #b8b7b7 !important;
}
.KeyboardShortcutRow_keyContainer {
  display: inline-block;
}
.KeyboardShortcutRow_action {
  display: inline;
}
.KeyboardShortcutRow_keyContainer {
  background: #DDD;
  padding: 5px 4px 8px 4px;
  line-height: 4px;
  margin-right: 5px;
}
li.KeyboardShortcutRow {
  margin-bottom: 4px;
}
.mapstats .diff-stars {
  padding-top: 14px;
}
.card.bg-danger, .card.bg-secondary {
  .card-text > a {
    color: $body-color;
    text-decoration: underline;

    &:hover {
      color: #000;
    }
  }
}
.btn-check {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;

  &[disabled], &:disabled {
    + .btn {
      pointer-events: none;
      filter: none;
      opacity: 0.65;
    }
  }
}
.btn-outline-light {
  .btn-check:checked + &, .btn-check:active + &, &:active, &.active, &.dropdown-toggle.show {
    color: $black;
    background-color: $light;
    border-color: $light;

    &:focus {
      box-shadow: 0 0 0 0.25rem rgba($light, 0.5);
    }
  }
  .btn-check:focus + &, &:focus {
    box-shadow: 0 0 0 0.25rem rgba($light, 0.5);
  }
}
#beatsage-no + label {
  width: 45%;
}
#beatsage-yes + label {
  width: 54%;
  margin-left: 1%;
}

.user-form {
  width: 600px;

  hr {
    border-color: $gray-600;
  }
}

.user-form, .login-form {
  margin: auto;

  button[type="submit"], .forgot_pwd, .login_back {
    display: block;
    margin-top: 10px;
  }
}

.login-form {
  width: 420px;
  margin-top: 80px;
  text-align: center;

  hr {
    border-color: $gray-700;
  }

  .login_back {
    text-align: left;
  }

  .discord-btn {
    margin-bottom: 14px;
    font-weight: 100;
    color: $white;
    width: 190px;
    font-size: 0.9rem;
    background: #7289da;

    &:hover {
      background: #4752c4;
    }
  }
}

.user-suggestion-card {
  max-width: 300px;
  color: $white;
  transition: background-color 0.17s ease;
  text-align: center;
  margin: auto auto 20px;

  img {
    margin-right: 6px;
  }

  &:hover {
    background: #444;
    text-decoration: none;
    color: $white;
  }
}

.playlist-info {
  white-space: nowrap !important;

  img {
    width: 100%;
    border-top-left-radius: 0.25rem;
    border-top-right-radius: 0.25rem;
    border: 1px solid #444;
    border-bottom: 0;
  }
  .btn-group a {
    flex: 1 1 0;
  }
  .list-group, .btn-group {
    width: 100%;
    margin-bottom: 1rem;
  }
  .ws-normal {
    white-space: normal;
  }
}

.playlist.table {
  img {
    width: 48px;
    height: 48px;
  }
  tbody tr {
    cursor: pointer;
  }
  td:nth-child(1), td:nth-child(3) {
    width: 72px;
  }
  td, th {
    vertical-align: middle;
  }
}

.custom-file-label {
  right: 74px;
  color: #888;
  &::after {
    top: -1px;
    right: -74px;
    bottom: auto;
    height: auto;
    border: 1px solid #222;
  }
}

.check-border {
  border: 1px solid;
  border-radius: 5px;
  padding-left: 0;
  margin-bottom: 10px;
  width: 400px;

  .form-check-label {
    padding: 10px 10px 10px 40px;
    width: 100%;
    cursor: pointer;
  }

  input[type=datetime-local] {
    width: 240px;
  }
}

table.modlog {
    td, th {
        width: 20%
    }
}

@include media-breakpoint-up(sm) {
  .filter-dropdown {
    width: 100%;
    span {
      width: 81px;
    }
  }
  .DateInput_input__small {
    padding: 7px 4px 5px !important;
    font-size: 11px !important;
  }
  .DateInput__small {
    width: 48px !important;
  }
  .filter-container .dropdown-menu .d-flex {
    flex-direction: row;
  }
}

@include media-breakpoint-up(md) {
  .search-results, .playlist {
    img.mode {
      margin-right: 4px;
    }
    .diffs {
      span {
        font-size: 0.7rem;
      }
    }
  }
  .table.mappers {
    td, th {
      &:nth-child(4), &:nth-child(5) {
        display: table-cell;
      }
    }
  }
  .filter-dropdown span {
    width: 127px;
  }
  .scores th, .scores td {
    &:nth-child(4) {
      display: table-cell;
    }
  }
  .DateInput__small {
    width: 70px !important;
  }
  .filter-container {
    position: relative;
    .dropdown-menu {
      transform: translate(-125px, 0);
    }
  }
}

@include media-breakpoint-up(lg) {
  .search-results {
    img.mode {
      margin-right: 0;
    }
    .diffs {
      span {
        font-size: 0;
      }
    }
  }
  .table.mappers {
    td, th {
      &:nth-child(n+13) {
        display: table-cell;
      }
    }
  }
  .search-results .beatmap {
    width: 50%;
  }
  .filter-dropdown {
    width: 200px;
    span {
      width: 176px;
    }
  }
  .DateInput_input__small {
    padding: 7px 7px 5px !important;
    font-size: 15px !important;
  }
  .DateInput__small {
    width: 97px !important;
  }
  .mapstats {
    .stats {
      width: 188px;
    }
    span {
      font-size: 7px;
      width: 44px;
    }
  }
}
/* ... */

